--- a/app/scss/components/_footer.scss
+++ b/app/scss/components/_footer.scss
@@ -5,6 +5,11 @@
   border-bottom: 0.1rem solid #cfcfcf;
 
   &--fullscreen {
+    z-index: 10;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
     background-color: transparent;
     border-top: 0.1rem solid rgba(255, 255, 255, 0.2);
     border-bottom: 0.1rem solid rgba(255, 255, 255, 0.2);
