--- a/app/scss/components/_form.scss
+++ b/app/scss/components/_form.scss
@@ -17,7 +17,7 @@
     outline: none;
     border-bottom: 0.1rem solid rgba(255, 255, 255, 0.16);
     margin-bottom: 1.2rem;
-    padding: 0.4rem 1.2rem;
+    padding: 0.2rem 1.2rem 0.2rem 4.8rem;
   }
 
   &__input--password {
