--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -4,6 +4,11 @@
   border-bottom: 0.1rem solid rgba(34, 34, 34, 0.2);
 
   &--fullscreen {
+    z-index: 10;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
     background-color: transparent;
     border-top: 0.1rem solid rgba(255, 255, 255, 0.2);
     border-bottom: 0.1rem solid rgba(255, 255, 255, 0.2);
