--- a/app/scss/components/_menu.scss
+++ b/app/scss/components/_menu.scss
@@ -87,14 +87,70 @@
       fill: #fff;
     }
   }
+
+  &__list {
+    position: absolute;
+    background: rgba(255, 255, 255, 0.9);
+    //left: 0;
+    top: 0;
+    right: 0;
+    //height: 100vh;
+
+    display: none;
+
+    &.active {
+      display: flex;
+      top: 6.4rem;
+      //left: 50%;
+      width: 80%;
+      //transform: translateX(-50%);
+      border: 0.1rem solid #bebebe;
+
+      flex-direction: column;
+      pointer-events: all;
+      justify-content: center;
+      align-items: center;
+      z-index: 200;
+      animation: fade 0.1s linear;
+      border-radius: 1.2rem;
+
+      padding: 3.6rem;
+    }
+  }
 }
 
 @media (max-width: 740px) {
   .menu {
     margin-right: 0;
-    &__item--registration,
+    /*  &__item--registration,
     &__item--phone {
       display: none;
+    } */
+    order: 1;
+
+    position: absolute;
+    background: rgba(255, 255, 255, 0.9);
+
+    top: 0;
+    right: 0;
+
+    display: none;
+
+    &.active {
+      display: flex;
+      top: 6.4rem;
+      //left: 50%;
+      width: 80%;
+      //transform: translateX(-50%);
+      border: 0.1rem solid #bebebe;
+
+      flex-direction: column;
+      pointer-events: all;
+      justify-content: center;
+      align-items: center;
+      z-index: 200;
+      animation: fade 0.1s linear;
+      border-radius: 1.2rem;
     }
   }
 }
