--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -14,11 +14,16 @@
     border-bottom: 0.1rem solid rgba(255, 255, 255, 0.2);
   }
   &__nav {
+    position: relative;
     display: flex;
     justify-content: space-between;
     padding: 1.7rem 0;
   }
-
+  &__nav-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
   &__logo {
     margin-left: 1.3rem;
   }
