--- a/app/scss/components/_modal.scss
+++ b/app/scss/components/_modal.scss
@@ -8,7 +8,8 @@
   max-width: 117.1rem;
   width: 100%;
 
-  min-height: 75.2rem;
+  min-height: 70vh;
+  max-height: 80vh;
   z-index: 150;
   border-radius: 2.4rem;
   &.active {
@@ -17,6 +18,7 @@
 
   &__wrapper {
     width: 100%;
+    height: 100%;
   }
 
   &__close {
