--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -6,6 +6,7 @@
 @import './components/header';
 @import './components/menu';
 @import './components/btn';
+@import './components/news';
 @import './components/service';
 @import './components/client';
 @import './components/rating';
