--- a/app/scss/components/_services.scss
+++ b/app/scss/components/_services.scss
@@ -18,6 +18,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 3rem;
+    height: 41.2rem;
   }
   &__item {
     position: relative;
@@ -29,6 +30,16 @@
     overflow: hidden;
 
     background-size: cover;
+    &::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: rgba(0, 0, 0, 0.6);
+      z-index: 2;
+    }
   }
 
   &__item-inner {
