--- a/app/scss/components/_menu.scss
+++ b/app/scss/components/_menu.scss
@@ -92,7 +92,11 @@
 
   &__list-wrapper {
     position: absolute;
-    background: rgba(255, 255, 255, 0.95);
+    background: #fff;
+    border: 0.1rem solid #f2f2f2;
+    box-shadow: 0px 0.4rem 4rem rgb(0 0 0 / 12%);
+    border-bottom-left-radius: 1.2rem;
+    border-bottom-right-radius: 1.2rem;
 
     top: 0;
     right: 0;
