--- a/app/scss/components/_services.scss
+++ b/app/scss/components/_services.scss
@@ -18,17 +18,17 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 3rem;
-    height: 41.2rem;
   }
   &__item {
     position: relative;
+    height: 41.2rem;
     color: #fff;
 
     padding: 3.6rem;
     border-radius: 1.2rem;
-    background-image: url(../../images/services-1.jpg);
+    background-image: url(../../images/expert-1.jpg);
+    background-position: top center;
     overflow: hidden;
-
     background-size: cover;
     &::after {
       content: '';
@@ -106,6 +106,14 @@
 
     &__item-title {
       line-height: 2.4rem;
+    }
+  }
+}
+
+@media (max-width: 640px) {
+  .services {
+    &__item {
+      height: 60rem;
     }
   }
 }
