--- a/app/scss/components/_menu.scss
+++ b/app/scss/components/_menu.scss
@@ -94,7 +94,7 @@
     position: absolute;
     background: #fff;
     border: 0.1rem solid #f2f2f2;
-    box-shadow: 0px 0.4rem 4rem rgb(0 0 0 / 12%);
+    box-shadow: 0px 0.4rem 4rem rgba(0, 0, 0, 0.12);
     border-bottom-left-radius: 1.2rem;
     border-bottom-right-radius: 1.2rem;
 
