--- a/app/scss/components/_client.scss
+++ b/app/scss/components/_client.scss
@@ -16,7 +16,7 @@
   }
 
   &__img {
-    max-width: 100%;
+    width: 100%;
     border-radius: 1.2rem;
     object-fit: cover;
     height: 37rem;
@@ -197,13 +197,14 @@
   }
 }
 
-@media (max-width: 820px) {
+@media (max-width: 860px) {
   .client {
     &__profile-inner {
       grid-template-columns: 1fr;
     }
 
     &__img {
+      width: 18rem;
       height: 18rem;
     }
     &__img--desktop {
@@ -275,7 +276,8 @@
     }
     &__img {
       margin: 0 auto;
-      max-width: 37rem;
+      width: 37rem;
+      height: 37rem;
       margin-bottom: 2.4rem;
     }
 
