--- a/app/scss/components/_portfolio.scss
+++ b/app/scss/components/_portfolio.scss
@@ -18,9 +18,9 @@
     position: relative;
   }
 
-  &__slider-item {
+  /*  &__slider-item {
     min-height: 20.8rem;
-  }
+  } */
 
   & .swiper-slider {
     width: 100%;
@@ -34,6 +34,7 @@
 
   &__slider-img {
     width: 100%;
+    height: 20.8rem;
 
     object-fit: cover;
   }
