--- a/app/scss/components/_portfolio.scss
+++ b/app/scss/components/_portfolio.scss
@@ -18,10 +18,6 @@
     position: relative;
   }
 
-  /*  &__slider-item {
-    min-height: 20.8rem;
-  } */
-
   & .swiper-slider {
     width: 100%;
     overflow-x: hidden;
@@ -30,6 +26,24 @@
   &__item-wrapper {
     border-radius: 1.2rem;
     overflow: hidden;
+    position: relative;
+  }
+
+  &__slide-delete {
+    position: absolute;
+    color: #fff;
+    top: 1.2rem;
+    right: 1.2rem;
+    width: 2.8rem;
+    height: 2.8rem;
+    border-radius: 50%;
+    background-color: rgba(0, 0, 0, 0.8);
+    border: none;
+    outline: none;
+    cursor: pointer;
+    z-index: 10;
+    display: block;
+    padding: 0.2rem;
   }
 
   &__slider-img {
