--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -15,4 +15,5 @@ $mw: 120.1;
 
 /* Fonts */
 
-$fontfamily: '';
+$font-inter: 'Inter', 'Arial', sans-serif;
+$font-cormorant: 'Cormorant', 'Times New Roman', serif;
