--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -6,6 +6,13 @@
 @import './components/header';
 @import './components/menu';
 @import './components/btn';
+@import './components/top';
+@import './components/description';
+@import './components/card';
+@import './components/situations';
+@import './components/accent';
+@import './components/banner';
+@import './components/how';
 @import './components/news';
 @import './components/service';
 @import './components/client';
