Main page: adaptive (html + css)

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -274,4 +274,9 @@ button.swiper-pagination-bullet {
     left: auto;
     right: -1.5rem;
   }
+
+  .swiper-pagination {
+    bottom: 5rem;
+    left: 50%;
+  }
 }
