--- a/app/scss/components/_card.scss
+++ b/app/scss/components/_card.scss
@@ -44,3 +44,19 @@
     color: #222222;
   }
 }
+
+@media (max-width: 1200px) {
+  .card {
+    height: auto;
+    max-height: 30rem;
+    &__bottom {
+      padding: 2.4rem 2.4rem 2.4rem 2.4rem;
+    }
+  }
+}
+
+@media (max-width: 740px) {
+  .card {
+    height: 24.4rem;
+  }
+}
