--- a/app/scss/components/_situations.scss
+++ b/app/scss/components/_situations.scss
@@ -11,3 +11,23 @@
     margin-bottom: 3.6rem;
   }
 }
+
+@media (max-width: 1024px) {
+  .situations {
+    &__inner {
+      padding: 4.2rem 0;
+    }
+    &__text {
+      font-size: 4rem;
+      line-height: 4.4rem;
+    }
+  }
+}
+
+@media (max-width: 740px) {
+  .situations {
+    &__list {
+      grid-template-columns: repeat(1, 1fr);
+    }
+  }
+}
