--- a/app/scss/components/_top.scss
+++ b/app/scss/components/_top.scss
@@ -69,7 +69,7 @@
     color: inherit;
     font-size: 1.6rem;
     line-height: 3.6rem;
-    padding: 1rem 2.1rem 1rem 5.4rem;
+    padding: 1rem 2.1rem 1rem 5.2rem;
     border: none;
     background-image: url('../../images/icon-write.svg');
     background-size: 2.4rem 2.4rem;
@@ -80,8 +80,12 @@
   }
 
   &__btn:hover {
-    background-color: #c2770f;
+    background: #c2770f url('../../images/icon-write.svg');
+    background-size: 2.4rem 2.4rem;
+    background-repeat: no-repeat;
+    background-position: 10% 50%;
   }
+
   &__item-tags {
     margin-bottom: 2.4rem;
   }
@@ -98,6 +102,7 @@
 
     border: 0.1rem solid rgba(255, 255, 255, 0.5);
     border-radius: 3.2rem;
+    margin-right: 1.2rem;
   }
   &__tag-link {
     padding: 1.9rem 4.3rem;
@@ -135,6 +140,88 @@
   &__more-link:hover {
     span {
       border-bottom: 0.1rem solid #fff;
+    }
+  }
+}
+
+@media (max-width: 1200px) {
+  .top {
+    &__tags-list {
+      flex-wrap: wrap;
+      justify-content: flex-start;
+    }
+    &__tag-item {
+      margin-bottom: 1.2rem;
+    }
+    &__btn {
+      margin-bottom: 12rem;
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  .top {
+    &__title {
+      font-size: 5.2rem;
+      line-height: 5.2rem;
+    }
+  }
+}
+
+@media (max-width: 860px) {
+  .top {
+    &__btn {
+      margin-bottom: 12rem;
+    }
+  }
+}
+
+@media (max-width: 767px) {
+  .top {
+    &__btn {
+      margin-bottom: 9rem;
+    }
+  }
+}
+
+@media (max-width: 640px) {
+  .top {
+    &__title {
+      font-size: 4.2rem;
+      line-height: 4.2rem;
+    }
+
+    &__subtitle {
+      font-size: 2rem;
+      line-height: 2rem;
+    }
+    &__slider-item {
+      padding: 10rem 0 5.2rem;
+    }
+
+    &__tag-link {
+      padding: 1.2rem 2.4rem;
+    }
+
+    &__btn {
+      margin-bottom: 3rem;
+    }
+  }
+}
+
+@media (max-width: 376px) {
+  .top {
+    &__title {
+      font-size: 3.6rem;
+      line-height: 3.6rem;
+    }
+
+    &__tag-item {
+      margin-bottom: 0.4rem;
+    }
+
+    &__item-tags {
+      margin-bottom: 1.6rem;
     }
   }
 }
