--- a/app/scss/components/_accent.scss
+++ b/app/scss/components/_accent.scss
@@ -31,7 +31,7 @@
   }
 
   &__btn {
-    max-width: 23rem;
+    min-width: 23rem;
     backdrop-filter: blur(20px);
     font-weight: 700;
     font-size: 1.6rem;
