--- a/app/scss/components/_how.scss
+++ b/app/scss/components/_how.scss
@@ -19,6 +19,8 @@
     margin-bottom: 3.6rem;
   }
   &__list-item {
+    height: 15.6rem;
+    max-height: 20rem;
     box-shadow: 0px 0.4rem 4rem rgba(0, 0, 0, 0.1);
     border-radius: 2.4rem;
     margin-bottom: 3.6rem;
@@ -28,6 +30,7 @@
     font-weight: 700;
     font-size: 1.6rem;
     line-height: 2.4rem;
+    margin-bottom: 1.2rem;
   }
   &__item-text {
     opacity: 0.8;
