--- a/app/scss/components/_news.scss
+++ b/app/scss/components/_news.scss
@@ -34,7 +34,8 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: end;
+    -webkit-justify-content: flex-end;
+    justify-content: flex-end;
 
     padding: 2.4rem;
     border-radius: 2.4rem;
