Account-long: floating button (html + css)

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -17,6 +17,7 @@
 @import './components/service';
 @import './components/client';
 @import './components/rating';
+@import './components/rate';
 @import './components/request';
 @import './components/experts';
 @import './components/expert-card';
