--- a/app/scss/components/_edit-form.scss
+++ b/app/scss/components/_edit-form.scss
@@ -147,6 +147,11 @@
     margin-right: 1rem;
   }
 
+  &__file-label {
+    display: flex;
+    align-items: center;
+  }
+
   &__file-input {
     display: none;
   }
