--- a/app/scss/components/_modal.scss
+++ b/app/scss/components/_modal.scss
@@ -20,6 +20,18 @@
     overflow: scroll;
   }
 
+  &__edit-user .edit-form__btn:first-child {
+    margin-right: 10.2rem;
+  }
+
+  &__edit-user .edit-form__input-wrapper {
+    width: 30%;
+  }
+
+  &__edit-user .edit-form__select-input {
+    width: 100%;
+  }
+
   &__wrapper {
     width: 100%;
     height: 100%;
@@ -47,5 +59,16 @@
 @media (max-width: 1024px) {
   .modal {
     width: 90%;
+    &__edit-user .edit-form__input {
+      width: 100%;
+    }
+  }
+}
+
+@media (max-width: 740px) {
+  .modal {
+    &__edit-user .edit-form__input-wrapper {
+      width: 100%;
+    }
   }
 }
