--- a/app/scss/components/_rate.scss
+++ b/app/scss/components/_rate.scss
@@ -11,7 +11,7 @@
     border: none;
     border-radius: 2.4rem;
     z-index: 10;
-    box-shadow: 0 0 2rem rgba(0, 0, 0, 0.12);
+    box-shadow: 0 16px 48px rgba(0, 16, 61, 0.28);
     cursor: pointer;
     &:hover {
       background-color: #c2770f;
