--- a/app/scss/components/_modal.scss
+++ b/app/scss/components/_modal.scss
@@ -12,6 +12,23 @@
   max-height: 80vh;
   z-index: 150;
   border-radius: 2.4rem;
+  /*   &.modal__success {
+    padding: 2.4rem;
+    width: 40rem;
+    max-width: 90%;
+    min-height: 30vh;
+    max-height: 30vh;
+    box-shadow: 0 0.4rem 4rem rgba(0, 0, 0, 0.12);
+  } */
+
+  &.modal__review {
+    padding: 2.4rem;
+    width: 60rem;
+    max-width: 90%;
+    min-height: 30vh;
+    max-height: 50vh;
+    box-shadow: 0 0.4rem 4rem rgba(0, 0, 0, 0.12);
+  }
   &.active {
     display: block;
   }
@@ -40,7 +57,6 @@
   &__close {
     position: absolute;
     content: '';
-    background: center no-repeat url(../../images/icon-cancel.svg);
 
     cursor: pointer;
 
@@ -53,6 +69,68 @@
   &__form {
     width: 100%;
     background: #fff;
+  }
+
+  &__cross {
+    position: absolute;
+    content: '';
+    cursor: pointer;
+
+    width: 3.6rem;
+    height: 3.6rem;
+
+    top: 2rem;
+    right: 0;
+  }
+
+  /*   &__success-msg {
+    text-align: center;
+
+    font-size: 2.4rem;
+    line-height: 2.4rem;
+    margin-top: 3.6rem;
+    margin-bottom: 3.6rem;
+  } */
+  &__review-rating {
+    margin-bottom: 2.4rem;
+  }
+
+  &__review-textarea {
+    width: 100%;
+    color: $darkest-text;
+    background-color: #fff;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 2.4rem;
+    padding: 0.8rem;
+    margin-bottom: 2.4rem;
+    border: 0.1rem solid #bebebe;
+    border-radius: 0.8rem;
+    resize: none;
+    outline: none;
+    overflow: hidden;
+  }
+
+  &__review-textarea::placeholder {
+    color: $light-text;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 2.4rem;
+  }
+  &__review-btn {
+    width: 100%;
+    max-width: 100%;
+    background-color: $button-orange;
+    color: #fff;
+    font-size: 1.6rem;
+    line-height: 2rem;
+    padding: 1.4rem 3.6rem;
+    border: none;
+    cursor: pointer;
+  }
+
+  &__review-btn:hover {
+    background: #c2770f;
   }
 }
 
