--- a/app/scss/components/_signup.scss
+++ b/app/scss/components/_signup.scss
@@ -5,6 +5,8 @@
   backdrop-filter: blur(2rem);
   border-radius: 1.2rem;
   padding: 2.4rem 3.6rem;
+  margin-top: 13.6rem;
+  margin-bottom: 13.6rem;
 
   &--login {
     margin: auto;
