--- a/app/scss/components/_footer.scss
+++ b/app/scss/components/_footer.scss
@@ -5,8 +5,13 @@
   border-bottom: 0.1rem solid #cfcfcf;
 
   &--fullscreen {
-    position: relative;
-    margin-top: -6rem;
+    z-index: 10;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    /*  position: relative;
+    margin-top: -6rem; */
 
     background-color: transparent;
     border-top: 0.1rem solid rgba(255, 255, 255, 0.2);
