--- a/app/scss/components/_request.scss
+++ b/app/scss/components/_request.scss
@@ -13,7 +13,7 @@
   }
 
   &__img {
-    flex-basis: 6.9rem;
+    width: 6.9rem;
     height: 6.9rem;
     border-radius: 50%;
     overflow: hidden;
