--- a/app/scss/components/_modal.scss
+++ b/app/scss/components/_modal.scss
@@ -37,6 +37,10 @@
     overflow: scroll;
   }
 
+  &__edit .edit-form__title-input {
+    width: 18rem;
+  }
+
   &__edit-user .edit-form__btn:first-child {
     margin-right: 10.2rem;
   }
@@ -131,6 +135,22 @@
 
   &__review-btn:hover {
     background: #c2770f;
+  }
+}
+
+@media (max-width: 1200px) {
+  .modal {
+    &__edit .edit-form__header {
+      padding: 2.4rem 2.4rem;
+
+      display: flex;
+      flex-direction: column;
+      align-items: initial;
+    }
+
+    &__edit .edit-form__title-input {
+      width: 100%;
+    }
   }
 }
 
