--- a/app/scss/components/_expert-card.scss
+++ b/app/scss/components/_expert-card.scss
@@ -1,6 +1,7 @@
 .expert-card {
   box-shadow: 0px 0.4rem 4rem rgba(0, 0, 0, 0.12);
   border-radius: 1.2rem;
+  min-height: 100%;
 
   &__header {
     border-radius: 1.2rem 1.2rem 0 0;
