--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -12,6 +12,7 @@
 @import './components/situations';
 @import './components/accent';
 @import './components/banner';
+@import './components/spheres';
 @import './components/how';
 @import './components/news';
 @import './components/service';
