--- a/app/scss/components/_description.scss
+++ b/app/scss/components/_description.scss
@@ -42,6 +42,7 @@
   }
 
   &__package-item {
+    height: 9.8rem;
     position: relative;
     box-shadow: 0px 0.4rem 4rem rgba(0, 0, 0, 0.12);
     border-radius: 2.4rem;
@@ -50,17 +51,12 @@
     background-repeat: no-repeat;
     background-position: 3% 50%;
     overflow: hidden;
+    cursor: pointer;
   }
 
   &__package-inner {
     padding: 1.7rem 1.7rem 1.7rem 16.8rem;
   }
-  /*   &__package-img {
-    position: absolute;
-    top: -35%;
-    left: 5%;
-    z-index: 5;
-  } */
 
   &__package-quantity {
     font-family: $font-inter;
@@ -122,40 +118,21 @@
       font-size: 2rem;
       line-height: 2.4rem;
     }
-
-    /* &__package-inner {
-      padding: 1.7rem 1.7rem 1.7rem 14.8rem;
-    } */
-
-    /*  &__package-item {
-      padding: 1.7rem 1.7rem 1.7rem 14.8rem;
-    } */
-    /*   &__package-arrow {
-      margin-left: 0.8rem;
-    } */
-
-    /*  &__package-img {
-      left: 0;
-    } */
   }
 }
 
 @media (max-width: 1024px) {
   .description {
-    /*     &__package-img {
-      width: 15rem;
-      height: 15rem;
-      top: -40%;
-      left: 5%;
-    }
-    &__package-img {
-      top: -8%;
-    }
-    &__package-item {
-      padding: 2.4rem 2.4rem 2.8rem 15.8rem;
-    } */
     &__package-inner {
       padding: 1.7rem 1.7rem 1.7rem 13.8rem;
+    }
+  }
+}
+
+@media (max-width: 920px) {
+  .description {
+    &__package-inner {
+      padding: 1.7rem 1.7rem 1.7rem 12rem;
     }
   }
 }
@@ -188,21 +165,6 @@
     &__package-item {
       background-size: 25%;
     }
-
-    /*     &__package-item {
-      background-size: contain;
-      background-repeat: no-repeat;
-      background-position: 11% 50%;
-      padding: 2.4rem 2.4rem 2.8rem 22rem;
-    } */
-    /*     &__package-img {
-      top: -25%;
-      left: 8%;
-    }
-
-    &__package-arrow {
-      margin-left: 4rem;
-    } */
   }
 }
 
