Main page: banner fixes (html + css)

--- a/app/scss/components/_banner.scss
+++ b/app/scss/components/_banner.scss
@@ -38,6 +38,10 @@
     margin-bottom: 3.6rem;
   }
 
+  &__text--spheres {
+    max-width: 52rem;
+  }
+
   &__more-link {
     display: flex;
     justify-content: flex-start;
