--- a/app/scss/components/_portfolio.scss
+++ b/app/scss/components/_portfolio.scss
@@ -57,3 +57,31 @@
     display: none;
   }
 }
+
+@media (max-width: 540px) {
+  .portfolio {
+    padding-bottom: 3.6rem;
+    position: relative;
+    & .container::before {
+      position: absolute;
+      content: '';
+      width: calc(100% - 2rem);
+      height: 0.1rem;
+      background: #b2b7d7;
+      right: 1rem;
+      left: 1rem;
+      bottom: 0;
+    }
+
+    &__top {
+      flex-wrap: wrap;
+    }
+    &__top form {
+      width: 100%;
+    }
+    &__btn {
+      width: 100%;
+      margin-top: 1.2rem;
+    }
+  }
+}
