Edited select styles (html + css)

--- a/app/scss/components/_experts.scss
+++ b/app/scss/components/_experts.scss
@@ -25,6 +25,9 @@
     border-radius: 0.8rem;
 
     padding: 1.6rem 7rem 1.6rem 2.4rem;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -ms-appearance: none;
     appearance: none;
     background-image: url('../../images/select-arrow.svg');
     background-repeat: no-repeat;
