--- a/app/scss/components/_modal.scss
+++ b/app/scss/components/_modal.scss
@@ -33,10 +33,10 @@
     display: block;
   }
 
-  &__edit {
+  /*   &__edit {
     overflow: scroll;
   }
-
+ */
   &__edit .edit-form__title-input {
     width: 18rem;
   }
