--- a/app/scss/components/_top.scss
+++ b/app/scss/components/_top.scss
@@ -15,7 +15,7 @@
     position: relative;
 
     padding: 13.6rem 0 7.2rem;
-    height: calc(100vh - 20rem);
+    height: 100vh;
   }
   &__slider-item::after {
     content: '';
