--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -7,6 +7,8 @@ $darkgrey-text: #222222;
 $darkest-text: #111111;
 $accent-orange: #f3ab00;
 $button-orange: #dda41d;
+$button-green: #a6be6d;
+$border-green: #c3cea9;
 
 /* global breakpoints */
 
@@ -16,4 +18,5 @@ $mw: 120.1;
 /* Fonts */
 
 $font-inter: 'Inter', 'Arial', sans-serif;
+$font-opensans: 'Open Sans', 'Arial', sans-serif;
 $font-cormorant: 'Cormorant', 'Times New Roman', serif;
