--- a/app/scss/components/_menu.scss
+++ b/app/scss/components/_menu.scss
@@ -195,15 +195,16 @@
     border: 0.1rem solid $darkgrey-text;
   }
 
-  &__list-btns {
+  /*   &__list-btns {
     display: none;
     justify-content: flex-start;
     align-items: center;
     flex: 1;
-  }
+  } */
 
   &__profile {
     margin-right: 3.6rem;
+    margin-left: auto;
   }
 
   &__profile-link {
@@ -224,20 +225,48 @@
     display: block;
     color: $darkgrey-text;
   }
+
+  &__list {
+    margin-bottom: 5.4rem;
+  }
+
+  &__list-btn--mobile {
+    display: block;
+  }
+
+  &__list-btns {
+    display: flex;
+    flex: 1;
+    justify-content: flex-start;
+    align-items: center;
+    align-self: start;
+  }
+
+  &__list-wrapper.active {
+    width: 80%;
+  }
 }
 
-@media (max-width: 1024px) {
+/* @media (max-width: 1024px) {
   .menu {
     &__profile-name {
       display: none;
     }
   }
-}
+} */
 
 @media (max-width: 740px) {
   .menu {
-    &--desktop {
+    /* &--desktop {
       margin-right: 0;
+      display: none;
+    } */
+
+    &__profile {
+      margin-right: 2.4rem;
+    }
+
+    &__profile-name {
       display: none;
     }
 
@@ -257,9 +286,9 @@
     &__list-wrapper.active {
       width: 80%;
     }
-    &__profile {
+    /*  &__profile {
       margin-left: auto;
-    }
+    } */
   }
 }
 
